--- a/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
+++ b/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
@@ -13,16 +13,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dug sel ces bya ba'i rig sngags/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajāṅgulīnāmavidyā</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-015"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh571" type="text">
                     <ref>Toh 571</ref>
                     <biblScope>vol.90, ff.198r-page missing (pp.393-?)</biblScope>
-                    <location count-pages="2">
-                        <start volume="90" page="395"/>
-                        <end volume="90" page="396"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="90" start-page="393" end-page="394"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12304" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh990" type="text">
                     <ref>Toh 990</ref>
                     <biblScope>vol.101, ff.143v-144v(pp.286-288)</biblScope>
-                    <location count-pages="3">
-                        <start volume="101" page="288"/>
-                        <end volume="101" page="290"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="101" start-page="286" end-page="288"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12753" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:16 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:17:32.343Z" user="admin">16/12/2022 09:17:32</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
