--- a/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
+++ b/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dug sel ba'i rig sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">jāṅgulīvidyā</title>
                 <title type="mainTitle" xml:lang="en">The Spell of Jāṅgulī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dug sel ces bya ba'i rig sngags/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">jāṅgulīvidyā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dug sel ba'i rig sngags/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajāṅgulīnāmavidyā</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dug sel ces bya ba'i rig sngags/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dug sel gyi rig sngags/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dug sel ces bya ba'i rig sngags/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryajāṅgulīnāmavidyā</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:17:32.343Z" user="admin">16/12/2022 09:17:32</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:18:01.852Z" user="admin">16/12/2022 09:18:01</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:17:56.083Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
