--- a/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
+++ b/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dbyig ldan gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">hiraṇyavatīdhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of Hiraṇyavatī</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Hiraṇyavatī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dbyig dang ldan pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryahiraṇyavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dbyig dang ldan pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryahiraṇyavatīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-014"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh570" type="text">
                     <ref>Toh 570</ref>
                     <biblScope>vol.90, ff.196v-198r(pp.390-393)</biblScope>
-                    <location count-pages="4">
-                        <start volume="90" page="392"/>
-                        <end volume="90" page="395"/>
+                    <location work="UT4CZ5369" count-pages="4">
+                        <volume number="90" start-page="390" end-page="393"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12303" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh991" type="text">
                     <ref>Toh 991</ref>
                     <biblScope>vol.101, ff.144v-146v(pp.288-292)</biblScope>
-                    <location count-pages="5">
-                        <start volume="101" page="290"/>
-                        <end volume="101" page="294"/>
+                    <location work="UT4CZ5369" count-pages="5">
+                        <volume number="101" start-page="288" end-page="292"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12754" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:17 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:18:41.717Z" user="admin">16/12/2022 09:18:41</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:18:37.321Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:18:37.321Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
