--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">grags ldan ma'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">yaśovatīdhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of Yaśovatī</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Yaśovatī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grags ldan ma'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryayaśovatīdhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grags ldan ma'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryayaśovatīdhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-094-009"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh732" type="text">
                     <ref>Toh 732</ref>
                     <biblScope>vol.94, ff.224v-225r(pp.448-449)</biblScope>
-                    <location count-pages="2">
-                        <start volume="94" page="450"/>
-                        <end volume="94" page="451"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="94" start-page="448" end-page="449"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12473" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh992" type="text">
                     <ref>Toh 992</ref>
                     <biblScope>vol.101, ff.146v-147r(pp.292-293)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="294"/>
-                        <end volume="101" page="295"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="292" end-page="293"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12755" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:18 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:19:49.58Z" user="admin">16/12/2022 09:19:49</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:19:45.191Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:19:45.191Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
