--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rten 'brel 'byung ba'i snying po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pratītyasamutpādahṛdaya</title>
                 <title type="mainTitle" xml:lang="en">The Essence of Dependent Arising</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">pratītyasamutpādahṛdaya</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rten 'brel 'byung ba'i snying po/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpādahṛdayanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel bar 'byung ba'i snying po zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpādahṛdayanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rten cing 'brel bar 'byung ba'i snying po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpādahṛdayanāma</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:47:18.098Z" user="admin">16/12/2022 09:47:18</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:47:57.989Z" user="admin">16/12/2022 09:47:57</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:47:52.268Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
