--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">zla 'od kyi mtshan rjes dran/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">Recollecting the Names of Candraprabha</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">zla 'od kyi mtshan rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">zla ba'i 'od kyi mtshan rjes su dran pa/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">zla ba'i 'od kyi mtshan rjes su dran pa/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:51:42.952Z" user="admin">16/12/2022 09:51:42</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:52:14.174Z" user="admin">16/12/2022 09:52:14</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:52:08.438Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
