--- a/translations/kangyur/placeholders/083-023_toh475-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-023_toh475-the_tantra_of_red_yamari.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal ldan gshin rje gshed dmar po'i rgyud kyi rgyal po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmadraktayamāritantrarājanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-023"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh475" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:43 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:57:24.44Z" user="admin">16/12/2022 09:57:24</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:57:20.107Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:57:20.107Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
