--- a/translations/kangyur/placeholders/083-023_toh475-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-023_toh475-the_tantra_of_red_yamari.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed dmar po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">raktayamāritantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Red Yamāri</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal ldan gshin rje gshed dmar po'i rgyud kyi rgyal po zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">raktayamāritantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed dmar po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmadraktayamāritantrarājanāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal ldan gshin rje gshed dmar po'i rgyud kyi rgyal po zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,7 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:57:24.44Z" user="admin">16/12/2022 09:57:24</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:57:20.107Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:57:20.107Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:57:55.088Z" user="admin">16/12/2022 09:57:55</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:57:20.107Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:57:20.107Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:57:49.382Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
