--- a/translations/kangyur/placeholders/083-026_toh478-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-026_toh478-the_tantra_of_red_yamari.xml
@@ -11,8 +11,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmadraktayamāritantrarājanāma</title>
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, or Lhasa Kangyurs. Urga 475.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-026"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh478" type="text">
@@ -26,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:38 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:58:37.898Z" user="admin">16/12/2022 09:58:37</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:58:33.575Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:58:33.575Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
