--- a/translations/kangyur/placeholders/083-026_toh478-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-026_toh478-the_tantra_of_red_yamari.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed dmar po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">raktayamāritantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Red Yamāri</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal ldan gshin rje gshed dmar po'i rgyud kyi rgyal po zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīmadraktayamāritantrarājanāma</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">raktayamāritantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed dmar po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, or Lhasa Kangyurs. Urga 475.]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">śrīmadraktayamāritantrarājanāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal ldan gshin rje gshed dmar po'i rgyud kyi rgyal po zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -31,7 +33,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:58:37.898Z" user="admin">16/12/2022 09:58:37</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:58:33.575Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:58:33.575Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:59:07.597Z" user="admin">16/12/2022 09:59:07</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:58:33.575Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:58:33.575Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:59:01.911Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
