--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -10,16 +10,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-030"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh536" type="text">
                     <ref>Toh 536</ref>
                     <biblScope>vol.88, ff.83r-83r(pp.165-165)</biblScope>
-                    <location count-pages="1">
-                        <start volume="88" page="167"/>
-                        <end volume="88" page="167"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="88" start-page="165" end-page="165"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12259" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh869" type="text">
                     <ref>Toh 869</ref>
                     <biblScope>vol.100, ff.89r-89r(pp.177-177)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="179"/>
-                        <end volume="100" page="179"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="177" end-page="177"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12631" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:05 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:00:46.309Z" user="admin">16/12/2022 10:00:46</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:00:42Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:00:42Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
