--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -12,16 +12,20 @@
                 <title type="otherTitle" xml:lang="en">Recollecting the Names of the Buddha Śikhin</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor gyi mtshan rjes su dran pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-031"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh537" type="text">
                     <ref>Toh 537</ref>
                     <biblScope>vol.88, ff.83r-83r(pp.165-165)</biblScope>
-                    <location count-pages="1">
-                        <start volume="88" page="167"/>
-                        <end volume="88" page="167"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="88" start-page="165" end-page="165"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12260" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh870" type="text">
                     <ref>Toh 870</ref>
                     <biblScope>vol.100, ff.89r-89r(pp.177-177)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="179"/>
-                        <end volume="100" page="179"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="177" end-page="177"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12632" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:06 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:01:28.679Z" user="admin">16/12/2022 10:01:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:01:24.345Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:01:24.345Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
