--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes dran/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">Recollecting the Common Essence of the Tathāgatas</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:00:46.309Z" user="admin">16/12/2022 10:00:46</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:00:42Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:00:42Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:02:41.263Z" user="admin">16/12/2022 10:02:41</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:00:42Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:00:42Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:02:35.567Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
