--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -6,17 +6,18 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod sprin gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">pūjameghadhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, the Cloud of Offerings</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Cloud of Offerings</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mchod pa'i sprin zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">pūjameghanāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-032"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh538" type="text">
@@ -39,9 +40,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:09:39.892Z" user="admin">20/12/2019 13:09:39</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:03:32.364Z" user="admin">16/12/2022 10:03:32</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
